<resources>
    <string name="app_name">Billing</string>
    <string name="item">Item</string>
    <string name="_100">100</string>
    <string name="_116">116</string>
    <string name="_16">16</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="discount">Discount</string>
    <string name="item_code">Item code</string>
    <string name="service_tax">Service Tax</string>
    <string name="sl_no">Sl.No</string>
    <string name="total_payable">Total Payable</string>
    <string name="total">Total</string>
    <string name="content_description_for_image">content description for image</string>
    <string name="select_back_up">SELECT BACK UP</string>
    <string name="percentsymbol">%</string>
    <string name="local_data_back_up">Local Data Back-up</string>
    <string name="set_total_tax_percentage">Set Total Tax Percentage</string>
    <string name="item_description">ITEM DESCRIPTION</string>
    <string name="item_name">ITEM NAME</string>
    <string name="_123456">123456</string>
    <string name="_2017_02_04_23_59_59">2017-02-04 23:59:59</string>
    <string name="date">Date :</string>
    <string name="description2">Description</string>
    <string name="amount2">Amount</string>
    <string name="discount2">Discount</string>
    <string name="form_no_8b_ntax_invoice_see_rule_58_10_ncash_credit">FORM NO. 8B\nTAX INVOICE [See Rule 58(10)]\nCASH/CREDIT</string>
    <string name="grant_total">Grant Total</string>
    <string name="invoice_no">Invoice no :</string>
    <string name="item2">Item</string>
    <string name="service_tax2">Service Tax</string>
    <string name="sl_no2">Sl no.</string>
    <string name="tin2">TIN:</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="textview10">TextView</string>
    <string name="textview11">TextView</string>
    <string name="to">To:</string>
    <string name="total2">Total</string>
    <string name="address">ADDRESS</string>
    <string name="enter_customer_information">ENTER CUSTOMER INFORMATION</string>
    <string name="name">NAME</string>
    <string name="_10_jan_2017">10-Jan-2017</string>
    <string name="_10000">10000</string>
    <string name="_11_jan_2017">11-Jan-2017</string>
    <string name="_5000">5000</string>
    <string name="from">FROM :</string>
    <string name="to2">TO :</string>
    <string name="total_profit2">TOTAL PROFIT </string>
    <string name="total_sale2">TOTAL SALE   </string>
    <string name="address_line_1">ADDRESS LINE 1</string>
    <string name="address_line_2">ADDRESS LINE 2</string>
    <string name="address_line_3">ADDRESS LINE 3</string>
    <string name="name2">NAME</string>
    <string name="phone">PHONE</string>
    <string name="tin">TIN</string>
    <string name="brand_description">BRAND / DESCRIPTION</string>
    <string name="price">PRICE</string>
    <string name="quantity">QUANTITY</string>
    <string name="select_item_type">SELECT ITEM TYPE</string>
    <string name="selling_price">SELLING PRICE</string>
    <string name="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="item_text">Item Text</string>
    <string name="_10">10</string>
    <string name="_1000">1000</string>
    <string name="item3">Item</string>
    <string name="description_comes_here">description comes here</string>
    <string name="_103">10</string>
    <string name="_10003">1000</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="bill_no">Bill no</string>
    <string name="date2">Date</string>
    <string name="item4">Item</string>
    <string name="available">AVAILABLE :</string>
    <string name="textview12">TextView</string>
    <string name="textview14">TextView</string>
    <string name="textview15">TextView</string>
    <string name="total_sold_till_now">Total Sold till Now :</string>
    <string name="add_item">Add Item</string>
    <string name="item5">Item :</string>
    <string name="total_available">Total Available:</string>
    <string name="facebook_app_id">2343884442418927</string>
    <string name="fb_login_protocol_scheme">fb2343884442418927</string>


    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2498468757920270/8518179745</string>
</resources>
