<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_billing_bill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="10dp"
    android:paddingRight="10dp"


    android:background="@color/bgColor"
    tools:context="com.arpo.billing.Billing_bill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/print_bill"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/billLayout"
            android:layout_height="match_parent"
            android:drawingCacheQuality="high"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            tools:ignore="UselessParent">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txt_bill_slno_label"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="110dp"
                android:id="@+id/lv_bill_billitem" />

            <TextView
                android:text="@string/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_company_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:text="@string/amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_amount_label"
                android:textColor="@color/white"
                android:layout_above="@+id/lv_bill_billitem"
                android:layout_alignParentEnd="true" />

            <TextView
                android:text="@string/textview2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_service_tax"
                android:textColor="@color/white"
                android:layout_alignBottom="@+id/txt_bill_service_tax_label"
                android:layout_alignStart="@+id/txt_bill_total"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/grant_total"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_grant_total_label"
                android:textColor="@color/white"
                android:layout_alignTop="@+id/txt_bill_service_tax"
                android:layout_alignStart="@+id/txt_bill_discount_label" />

            <TextView
                android:text="@string/service_tax2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_service_tax_label"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_total"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/textview3"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_grant_total"
                android:textColor="@color/white"
                android:layout_alignBottom="@+id/txt_bill_grant_total_label"
                android:layout_alignStart="@+id/txt_bill_discount" />

            <TextView
                android:text="@string/textview4"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_discount"
                android:textColor="@color/white"
                android:layout_width="75dp"
                android:layout_above="@+id/txt_bill_grant_total"
                android:layout_alignParentEnd="true"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/discount2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_discount_label"
                android:textColor="@color/white"
                android:layout_alignBaseline="@+id/txt_bill_discount"
                android:layout_alignBottom="@+id/txt_bill_discount"
                android:layout_toStartOf="@+id/txt_bill_grant_total" />

            <TextView
                android:text="@string/textview5"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_total"
                android:textColor="@color/white"
                android:layout_width="70dp"
                android:layout_alignBaseline="@+id/txt_bill_total_label"
                android:layout_alignBottom="@+id/txt_bill_total_label"
                android:layout_toEndOf="@+id/txt_bill_service_tax_label"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/textview6"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_address1"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="175dp"
                android:layout_below="@+id/txt_bill_company_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/textview7"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_address3"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="175dp"
                android:textAlignment="center"
                android:layout_below="@+id/txt_bill_address1"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/txt_bill_address1"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/form_no_8b_ntax_invoice_see_rule_58_10_ncash_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_form_8b"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_below="@+id/txt_bill_tin_label"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/sl_no2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_slno_label"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/txt_bill_customer_address"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/_123456"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_no"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_form_8b"
                android:layout_toEndOf="@+id/txt_bill_no_label"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_date_label"
                android:textColor="@color/white"
                android:layout_alignBaseline="@+id/txt_bill_no"
                android:layout_alignBottom="@+id/txt_bill_no"
                android:layout_centerHorizontal="true"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/_2017_02_04_23_59_59"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_date"
                android:textColor="@color/white"
                android:layout_alignBaseline="@+id/txt_bill_date_label"
                android:layout_alignBottom="@+id/txt_bill_date_label"
                android:layout_toEndOf="@+id/txt_bill_date_label"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/invoice_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_no_label"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_form_8b"
                android:layout_alignParentStart="true"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_to_label"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_no_label"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/textview9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_customer"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_no"
                android:layout_toEndOf="@+id/txt_bill_to_label"
                android:layout_marginTop="7dp"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/textview10"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_tin"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:layout_alignBaseline="@+id/txt_bill_tin_label"
                android:layout_alignBottom="@+id/txt_bill_tin_label"
                android:layout_toEndOf="@+id/txt_bill_slno_label"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/description2"
                android:id="@+id/txt_bill_description_label"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:layout_above="@+id/lv_bill_billitem"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="500dp"
                app:srcCompat="@color/white"
                android:id="@+id/imageView2"
                android:layout_above="@+id/txt_bill_no"
                android:layout_alignParentStart="true"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:contentDescription=""
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="500dp"
                app:srcCompat="@color/white"
                android:id="@+id/imageView3"
                android:layout_above="@+id/txt_bill_slno_label"
                android:layout_alignParentStart="true"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="500dp"
                app:srcCompat="@color/white"
                android:id="@+id/imageView4"
                android:layout_above="@+id/txt_bill_total_label"
                android:layout_alignParentStart="true"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="500dp"
                app:srcCompat="@color/white"
                android:id="@+id/imageView5"
                android:layout_height="1dp"
                android:layout_below="@+id/txt_bill_service_tax_label"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_bill_declaration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView5"
                android:text="@string/textview11"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="7sp"
                tools:ignore="SmallSp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/layout_bill_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_bill_print"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/print" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_bill_ok"
                    android:background="@drawable/billok"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/btn_bill_edit"
                    android:background="@drawable/billedit" />

            </RelativeLayout>

            <TextView
                android:text="@string/item2"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_item_label"
                android:textColor="@color/white"
                android:layout_width="80dp"
                android:layout_above="@+id/lv_bill_billitem"
                android:layout_toEndOf="@+id/txt_bill_slno_label" />

            <TextView
                android:text="@string/total2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_total_label"
                android:textColor="@color/white"
                android:layout_marginBottom="43dp"
                android:layout_above="@+id/layout_bill_content"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/tin2"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_tin_label"
                android:textColor="@color/white"
                android:layout_width="175dp"
                android:textAlignment="textStart"
                android:layout_below="@+id/txt_bill_address3"
                android:layout_alignParentStart="true"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:text="@string/textview8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bill_customer_address"
                android:textColor="@color/white"
                android:layout_below="@+id/txt_bill_to_label"
                android:layout_alignParentStart="true"
                android:textSize="11sp"
                tools:ignore="SmallSp" />


        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
