<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="30dp"
    android:background="@color/bgColor">

    <TextView
        android:text="@string/_10"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_list_bill_slno"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="40dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/_1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txt_list_bill_amount"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/txt_list_bill_description"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <TextView
        android:text="@string/item3"
        android:layout_height="wrap_content"
        android:id="@+id/txt_list_bill_item"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_list_bill_slno"
        android:layout_width="80dp" />

    <TextView
        android:text="@string/description_comes_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_list_bill_description"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_list_bill_item" />
</RelativeLayout>