<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_billing_stock_item_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arpo.billing.Billing_stock_item_info"
    android:background="@color/bgColor">

    <TextView
        android:text="@string/item5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_stockItem_totalAvailable_label"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_stockItem_item_name_label"
        android:textColor="@color/white" />

    <TextView
        android:text="@string/total_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_stockItem_totalAvailable_label"
        android:textColor="@color/white"
        android:layout_below="@+id/txt_stockItem_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_stockItem_totalAvailable"
        android:textColor="@color/white"
        android:layout_below="@+id/txt_stockItem_name"
        android:layout_toEndOf="@+id/txt_stockItem_totalAvailable_label"
        android:layout_marginStart="12dp" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/txt_stockItem_name"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_stockItem_totalAvailable" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stockimg"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_stockItem_editItem"
        android:id="@+id/imageView9"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_stockItem_editItem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/lv_stockItem"
        android:dividerHeight="10.0px"/>

    <Button
        android:id="@+id/btn_stockItem_editItem"
        android:background="@drawable/edititem"
        android:layout_height="40dp"
        android:layout_width="120dp"
        android:layout_below="@+id/imageView9"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
